--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,13 @@
 version: '3'
 services: 
 
+  db:
+    image: mongo:5.0.9
+    container_name: db
+    ports:
+      - "4000:27017"    #conventional port for mongodb
+    restart: always
+
   azure-storage:
     image: azure_storage
     build:
@@ -8,12 +15,11 @@ services:
       dockerfile: Dockerfile
     container_name: video-storage
     ports:
-      - "4000:80"
+      - "4001:80"
     environment:
       - PORT=80
       - STORAGE_ACCOUNT_NAME=${STORAGE_ACCOUNT_NAME}
       - STORAGE_ACCESS_KEY=${STORAGE_ACCESS_KEY}
-
     restart: "no"
 
   video-streaming: 
@@ -21,15 +27,16 @@ services:
     build:
       context: ./video-streaming
       dockerfile: Dockerfile
-
     container_name: video-streaming
-
     ports: 
-      - "4001:80"
-
+      - "4002:80"
     environment:
       - PORT=80
+      - DBHOST=mongodb://db:27017
+      - DBNAME=video-streaming
       - VIDEO_STORAGE_HOST=video-storage
       - VIDEO_STORAGE_PORT=80
-
     restart: "no"
+
+
+    
