--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,26 +1,26 @@
 version: '3'
 services: 
 
-  db:
-    image: mongo:5.0.9
-    container_name: db
-    ports:
-      - "4000:27017"    #conventional port for mongodb
-    restart: always
+  # db:
+  #   image: mongo:5.0.9
+  #   container_name: db
+  #   ports:
+  #     - "4000:27017"    #conventional port for mongodb
+  #   restart: always
 
-  azure-storage:
-    image: azure_storage
-    build:
-      context: ./azure-storage
-      dockerfile: Dockerfile
-    container_name: video-storage
-    ports:
-      - "4001:80"
-    environment:
-      - PORT=80
-      - STORAGE_ACCOUNT_NAME=${STORAGE_ACCOUNT_NAME}
-      - STORAGE_ACCESS_KEY=${STORAGE_ACCESS_KEY}
-    restart: "no"
+  # azure-storage:
+  #   image: azure_storage
+  #   build:
+  #     context: ./azure-storage
+  #     dockerfile: Dockerfile
+  #   container_name: video-storage
+  #   ports:
+  #     - "4001:80"
+  #   environment:
+  #     - PORT=80
+  #     - STORAGE_ACCOUNT_NAME=${STORAGE_ACCOUNT_NAME}
+  #     - STORAGE_ACCESS_KEY=${STORAGE_ACCESS_KEY}
+  #   restart: "no"
 
   video-streaming: 
     image: video-streaming
@@ -28,15 +28,35 @@ services:
       context: ./video-streaming
       dockerfile: Dockerfile
     container_name: video-streaming
+    volumes:
+      - /tmp/video-streaming/npm-cache:/root/.npm:z
+      - ./video-streaming/src:/usr/src/app/src:z
+      - ./video-streaming/videos:/usr/src/app/videos:z
     ports: 
       - "4002:80"
     environment:
       - PORT=80
-      - DBHOST=mongodb://db:27017
-      - DBNAME=video-streaming
-      - VIDEO_STORAGE_HOST=video-storage
-      - VIDEO_STORAGE_PORT=80
+      # - DBHOST=mongodb://db:27017
+      # - DBNAME=video-streaming
+      # - VIDEO_STORAGE_HOST=video-storage
+      # - VIDEO_STORAGE_PORT=80
+      - NODE_ENV=development
     restart: "no"
 
+  history:
+    image: history
+    build:
+      context: ./history
+      dockerfile: Dockerfile-dev
+    container_name: history
+    volumes:
+      - /tmp/history/npm-cache:/root/.npm:z
+      - ./history/src:/usr/src/app/src:z
+    ports:
+      - "4002:80"
+    environment:
+      - PORT=80
+      - NODE_ENV=development
+    restart: "no"
 
     
