--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,23 @@
 version: '3'
 services: 
 
-  # db:
-  #   image: mongo:5.0.9
-  #   container_name: db
-  #   ports:
-  #     - "4000:27017"    #conventional port for mongodb
-  #   restart: always
+  db:
+    image: mongo:5.0.9
+    container_name: db
+    ports:
+      - "4000:27017"    #conventional port for mongodb
+    restart: always
+
+  rabbit:
+    image: rabbitmq:3.9.21-management     #rabbitmq:3.9.21 - lean no management dashboard
+    container_name: rabbit
+    ports:
+      - "5672:5672"     #send and receive messages with amqplib
+      - "15672:15672"   # access rabbitMQ management dashboard
+    expose:
+      - "5672"
+      - "15672"
+    restart: always
 
   # azure-storage:
   #   image: azure_storage
@@ -26,21 +37,24 @@ services:
     image: video-streaming
     build:
       context: ./video-streaming
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile-dev
     container_name: video-streaming
     volumes:
       - /tmp/video-streaming/npm-cache:/root/.npm:z
       - ./video-streaming/src:/usr/src/app/src:z
       - ./video-streaming/videos:/usr/src/app/videos:z
     ports: 
-      - "4002:80"
+      - "4001:80"
     environment:
       - PORT=80
+      - RABBIT=amqp://guest:guest@rabbit:5672
       # - DBHOST=mongodb://db:27017
       # - DBNAME=video-streaming
       # - VIDEO_STORAGE_HOST=video-storage
       # - VIDEO_STORAGE_PORT=80
       - NODE_ENV=development
+    depends_on:
+      - rabbit
     restart: "no"
 
   history:
@@ -56,7 +70,13 @@ services:
       - "4002:80"
     environment:
       - PORT=80
+      - RABBIT=amqp://guest:guest@rabbit:5672
+      - DBHOST=mongodb://db:27017
+      - DBNAME=videos
       - NODE_ENV=development
+    depends_on:
+      - db
+      - rabbit
     restart: "no"
 
     
