--- a/history/package.json
+++ b/history/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "amqplib": "^0.10.3",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "wait-port": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
