local kubernetes setup for videostreaming

--- a/video-streaming/Dockerfile-prod
+++ b/video-streaming/Dockerfile-prod
@@ -4,6 +4,7 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install --only=production
 COPY ./src ./src
-
-CMD npx wait-port rabbit:5672 && \
-    npm start
+COPY ./videos ./videos
+CMD npm start
+# CMD npx wait-port rabbit:5672 && \
+    # npm start
