--- a/video-streaming/package.json
+++ b/video-streaming/package.json
@@ -2,7 +2,7 @@
   "name": "project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
@@ -12,10 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.10.3",
-    "express": "^5.0.0-beta.1",
-    "mongodb": "^6.3.0",
-    "wait-port": "^1.1.0"
+    "express": "^5.0.0-beta.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
