--- a/video-streaming/package.json
+++ b/video-streaming/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env PORT=5000 jest",
+    "test:watch": "cross-env PORT=5000 jest --watchAll",
     "start": "node src/index.js",
     "start:dev": "nodemon src/index.js"
   },
@@ -15,6 +16,9 @@
     "express": "^5.0.0-beta.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.3",
+    "supertest": "^6.3.4"
   }
 }
