--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
       with:
         node-version: 20.x
         cache: 'npm'
-        cache-dependency-path: ../video-streaming/package-lock.json
+        cache-dependency-path: video-streaming/package-lock.json
 
     - run: npm ci     #this is the CI pipeline command
     - run: npm test   #automated test - came from template - next chapter shows how to implement
