--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: video-streaming
     steps:
 
     - uses: actions/checkout@v3
@@ -20,7 +22,7 @@ jobs:
       with:
         node-version: 20.x
         cache: 'npm'
-        cache-dependency-path: ./video-streaming/package-lock.json
+        cache-dependency-path: ./package-lock.json
 
     - run: npm ci     #this is the CI pipeline command
     - run: npm test   #automated test - came from template - next chapter shows how to implement
