--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,28 +1,28 @@
-# name: CI
+name: CI
 
-# on:
-#   push:
-#     branches:
-#       - master
-#     paths:
-#       - video-streaming/**
-#   workflow_dispatch:
+on:
+  # push:
+  #   branches:
+  #     - master
+  #   paths:
+  #     - video-streaming/**
+  workflow_dispatch:
 
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     defaults:
-#       run:
-#         working-directory: video-streaming
-#     steps:
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: video-streaming
+    steps:
 
-#     - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-#     - uses: actions/setup-node@v3   # installs node for workflow
-#       with:
-#         node-version: 20.x
-#         cache: 'npm'
-#         cache-dependency-path: '**/package-lock.json'   #this was key for EVERYTHING
+    - uses: actions/setup-node@v3   # installs node for workflow
+      with:
+        node-version: 20.x
+        cache: 'npm'
+        cache-dependency-path: '**/package-lock.json'   #this was key for EVERYTHING
 
-#     - run: npm ci     #this is the CI pipeline command
-#     - run: npm test   #automated test - came from template - next chapter shows how to implement
+    - run: npm ci     #this is the CI pipeline command
+    - run: npm test   #automated test - came from template - next chapter shows how to implement
