--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,7 +35,7 @@ jobs:
           # installing and oncfiguring kubectl so it can run in workfloww - ccustom action
           # extracts kubectl config from the github secret 
 
-      - name: tale/kubectl-action@v1
+      - uses: tale/kubectl-action@v1
         with:   
           base64-kube-config: $ {{ secrets.KUBE_CONFIG }}
           kubectl-version: v1.24.2
