--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,6 +36,10 @@ jobs:
           # installing and oncfiguring kubectl so it can run in workfloww - ccustom action
           # extracts kubectl config from the github secret 
 
+      - name: Set up kubeconfig
+        run: |
+          echo "${{ secrets.KUBECONFIG }}" | base64 --decode > $HOME/ .kube/config
+
       - uses: tale/kubectl-action@v1
         with:   
           base64-kube-config: $ {{ secrets.KUBE_CONFIG }}
