working version of deploy yaml - commented out push workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,11 +1,11 @@
 name: deploy
 
 on:
-  push: 
-    branches:
-      - master
-    paths:
-      - video-streaming/**
+  # push: 
+  #   branches:
+  #     - master
+  #   paths:
+  #     - video-streaming/**
   
   workflow_dispatch:
 
