end to end tests with playwright

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,19 +5,58 @@ services:
     image: mongo:5.0.9
     container_name: db
     ports:
-      - "4000:27017"    #conventional port for mongodb
+      - "27017:27017"
+      # - "4000:27017"    #conventional port for mongodb
     restart: always
 
-  rabbit:
-    image: rabbitmq:3.9.21-management     #rabbitmq:3.9.21 - lean no management dashboard
-    container_name: rabbit
+  db-fixture-rest-api:
+    image: db-fixture-rest-api
+    build:
+      context: ./db-fixture-rest-api
+      dockerfile: Dockerfile
+    container_name: db-fixture-rest-api
     ports:
-      - "5672:5672"     #send and receive messages with amqplib
-      - "15672:15672"   # access rabbitMQ management dashboard
-    expose:
-      - "5672"
-      - "15672"
+      - "9000:80"
+    environment:
+      - PORT=80
+      - DBHOST=mongodb://db:27017
+      - FIXTURES_DIR=fixtures
+    volumes:
+      - ./fixtures:/usr/src/app/fixtures:z
+    depends_on:
+      - db
     restart: always
+
+  metadata:
+    image: metadata
+    build:
+      context: ./metadata
+      dockerfile: Dockerfile-dev
+    container_name: metadata
+    volumes:
+      - /tmp/metadata/npm-cache:/root/ .npm:z
+      - ./metadata/src:/usr/src/app/src:z
+    ports:
+      - "4006:80"
+    environment:
+      - PORT=80
+      - DBHOST=mongodb://db:27017
+      - DBNAME=metadata
+      - NODE_ENV=development
+    depends_on:
+      - db
+    restart: "no"
+
+  # rabbit:
+  #   image: rabbitmq:3.9.21-management     #rabbitmq:3.9.21 - lean no management dashboard
+  #   container_name: rabbit
+  #   ports:
+  #     - "5672:5672"     #send and receive messages with amqplib
+  #     - "15672:15672"   # access rabbitMQ management dashboard
+  #   expose:
+  #     - "5672"
+  #     - "15672"
+  #   restart: always
 
   # azure-storage:
   #   image: azure_storage
@@ -33,71 +72,71 @@ services:
   #     - STORAGE_ACCESS_KEY=${STORAGE_ACCESS_KEY}
   #   restart: "no"
 
-  video-streaming: 
-    image: video-streaming
-    build:
-      context: ./video-streaming
-      dockerfile: Dockerfile-dev
-    container_name: video-streaming
-    volumes:
-      - /tmp/video-streaming/npm-cache:/root/.npm:z
-      - ./video-streaming/src:/usr/src/app/src:z
-      - ./video-streaming/videos:/usr/src/app/videos:z
-    ports: 
-      - "4001:80"
-    environment:
-      - PORT=80
-      - RABBIT=amqp://guest:guest@rabbit:5672
-      # - DBHOST=mongodb://db:27017
-      # - DBNAME=video-streaming
-      # - VIDEO_STORAGE_HOST=video-storage
-      # - VIDEO_STORAGE_PORT=80
-      - NODE_ENV=development
-    depends_on:
-      - rabbit
-    restart: "no"
+  # video-streaming: 
+  #   image: video-streaming
+  #   build:
+  #     context: ./video-streaming
+  #     dockerfile: Dockerfile-dev
+  #   container_name: video-streaming
+  #   volumes:
+  #     - /tmp/video-streaming/npm-cache:/root/.npm:z
+  #     - ./video-streaming/src:/usr/src/app/src:z
+  #     - ./video-streaming/videos:/usr/src/app/videos:z
+  #   ports: 
+  #     - "4001:80"
+  #   environment:
+  #     - PORT=80
+  #     - RABBIT=amqp://guest:guest@rabbit:5672
+  #     # - DBHOST=mongodb://db:27017
+  #     # - DBNAME=video-streaming
+  #     # - VIDEO_STORAGE_HOST=video-storage
+  #     # - VIDEO_STORAGE_PORT=80
+  #     - NODE_ENV=development
+  #   depends_on:
+  #     - rabbit
+  #   restart: "no"
 
-  history:
-    image: history
-    build:
-      context: ./history
-      dockerfile: Dockerfile-dev
-    container_name: history
-    volumes:
-      - /tmp/history/npm-cache:/root/.npm:z
-      - ./history/src:/usr/src/app/src:z
-    ports:
-      - "4002:80"
-    environment:
-      - PORT=80
-      - RABBIT=amqp://guest:guest@rabbit:5672
-      - DBHOST=mongodb://db:27017
-      - DBNAME=videos
-      - NODE_ENV=development
-    depends_on:
-      - db
-      - rabbit
-    restart: "no"
+  # history:
+  #   image: history
+  #   build:
+  #     context: ./history
+  #     dockerfile: Dockerfile-dev
+  #   container_name: history
+  #   volumes:
+  #     - /tmp/history/npm-cache:/root/.npm:z
+  #     - ./history/src:/usr/src/app/src:z
+  #   ports:
+  #     - "4002:80"
+  #   environment:
+  #     - PORT=80
+  #     - RABBIT=amqp://guest:guest@rabbit:5672
+  #     - DBHOST=mongodb://db:27017
+  #     - DBNAME=videos
+  #     - NODE_ENV=development
+  #   depends_on:
+  #     - db
+  #     - rabbit
+  #   restart: "no"
 
-  recommendations:
-    image: recommendations
-    build: 
-      context: ./recommendations
-      dockerfile: Dockerfile-dev
-    container_name: recommendations
-    volumes:
-      - /tmp/recommendations/npm-cache:/root/.npm:z
-      - ./recommendations/src:/usr/src/app/src:z
-    ports:
-      - "4003:80"
-    environment:
-      - PORT=80
-      - RABBIT=amqp://guest:guest@rabbit:5672
-      - DBHOST=mongodb://db:27017
-      - DBNAME=recommendations
-      - NODE_ENV=development
-    depends_on:
-      - db
-      - rabbit
-    restart: "no"
+  # recommendations:
+  #   image: recommendations
+  #   build: 
+  #     context: ./recommendations
+  #     dockerfile: Dockerfile-dev
+  #   container_name: recommendations
+  #   volumes:
+  #     - /tmp/recommendations/npm-cache:/root/.npm:z
+  #     - ./recommendations/src:/usr/src/app/src:z
+  #   ports:
+  #     - "4003:80"
+  #   environment:
+  #     - PORT=80
+  #     - RABBIT=amqp://guest:guest@rabbit:5672
+  #     - DBHOST=mongodb://db:27017
+  #     - DBNAME=recommendations
+  #     - NODE_ENV=development
+  #   depends_on:
+  #     - db
+  #     - rabbit
+  #   restart: "no"
     
