--- a/metadata/package.json
+++ b/metadata/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "start": "node ./src/index.js",
+    "start:dev": "nodemon --legacy-watch ./src/index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "axios": "^1.6.7",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.3"
   },
   "dependencies": {
     "express": "^4.18.2",
