--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,23 @@ services:
       - db
     restart: always
 
+  gateway:
+    image: gateway
+    build:
+      context: ./gateway
+      dockerfile: Dockerfile-dev
+    container_name: gateway
+    volumes:
+      - /tmp/gateway/npm-cache:/root/.npm:z
+      - ./gateway/src:/usr/src/app/src:z
+      - ./gateway/public:/usr/src/app/public:z
+    ports:
+      - "4000:80"
+    environment:
+      - PORT=80
+      - NODE_ENV=development
+    restart: "no"
+
   metadata:
     image: metadata
     build:
